--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Life in The Wild</h1>
 	<div class="container">
-		<img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg">
+		<img src="https://blog.sothebysrealty.ae/hs-fs/hubfs/Most%20Expensive%20Horses%20Ever%20Sold-jpg-1.jpeg">
 		<img src="https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg">
 		<img src="https://static.pexels.com/photos/213399/pexels-photo-213399.jpeg">
 		<img src="https://static.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg">
