--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<h1>Life in The Wild</h1>
 	<div class="container">
 		<img src="https://blog.sothebysrealty.ae/hs-fs/hubfs/Most%20Expensive%20Horses%20Ever%20Sold-jpg-1.jpeg">
-		<img src="https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg">
-		<img src="https://static.pexels.com/photos/213399/pexels-photo-213399.jpeg">
-		<img src="https://static.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg">
-		<img src="https://static.pexels.com/photos/133459/pexels-photo-133459.jpeg">
-		<img src="https://static.pexels.com/photos/50988/ape-berber-monkeys-mammal-affchen-50988.jpeg">
+		<img src="https://cms.bbcearth.com//sites/default/files/factfiles/2024-07/el2.jpg">
+		<img src="https://live.staticflickr.com/65535/51980751292_38b3d98b76_b.jpg">
+		<img src="https://images.photowall.com/products/69237/lion-close-up.jpg?h=699&q=85">
+		<img src="https://i.natgeofe.com/n/9e934103-53e7-4553-be0e-b1823732b005/Kangaroo-12003.jpg">
+		<img src="https://files.worldwildlife.org/wwfcmsprod/images/Gorilla_WWwinter2023/story_full_width/8rwq82enph_Gorilla_WWwinter2023.jpg">
 	</div>
 </body>
 </html>
